--- a/netflix-clone/src/Components/Header/Header.css
+++ b/netflix-clone/src/Components/Header/Header.css
@@ -1,26 +1,27 @@
 .header_outer_container{
     position: sticky;
-    top: 0;
+    /* top: 0; */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 255, 255);
-    background-color: rgb(255, 255, 255);
-    background-color: transparent;
+    /* background-color: rgb(137, 89, 11); */
+    background-color: rgb(0, 0, 0);
+    /* background-color: transparent; */
     height: 10vh;
     color: white;
     transition:all 0.5s;
     transition-timing-function: ease-in;
     z-index: 1;
     /* background-color: rgb(255, 0, 0); */
+    align-items: space-between;
 }
 .nav-black{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 .header_container {
     width: 90%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 100%;
     list-style: none;
@@ -30,17 +31,17 @@
 .header_left ul{
     width: 140%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     list-style: none;
     cursor: pointer;
     /* background-color: lighlblue; */
 }
 .header_right{
+    padding-left: 50%;
     width: 150%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    align-items: left;
     list-style: none;
     cursor: pointer;
     /* background-color: lighlgreen; */
