--- a/netflix-clone/src/index.css
+++ b/netflix-clone/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googeapis.com/css2family=Iter:wght@100;200;300;400;500;600;700;800;900&Family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root {
+  box-sizing: content-box;
+  width: 100%;
+  /* border: solid #000000 10px; */
+  padding: 5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+margin: 0;
+padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(17, 16, 16);
 }
